[project]
name = "agentic-blogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.24",
    "uvicorn>=0.46.0",
    "watchdog>=6.0.0",
]
